-- The name of the package.
name:                koshucode-baala-type

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.185.0.0

-- A short (one-line) description of the package.
synopsis:            Additional data types for Koshucode

-- A longer description of the package.
description:         

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, 2016, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Type
        Koshucode.Baala.Type.Decimal
        Koshucode.Baala.Type.Decimal.BinaryAb
        Koshucode.Baala.Type.Decimal.Coder
        Koshucode.Baala.Type.Decimal.Decimal
        Koshucode.Baala.Type.Decimal.Fraction
        Koshucode.Baala.Type.Decimal.Rational

        Koshucode.Baala.Type.Judge
        Koshucode.Baala.Type.Judge.Interp
        Koshucode.Baala.Type.Judge.Judge
        Koshucode.Baala.Type.Judge.JudgeClass

        Koshucode.Baala.Type.Message

        Koshucode.Baala.Type.Rel
        Koshucode.Baala.Type.Rel.Head
        Koshucode.Baala.Type.Rel.Mono
        Koshucode.Baala.Type.Rel.Rel
        Koshucode.Baala.Type.Rel.TermPicker

        Koshucode.Baala.Type.Time
        Koshucode.Baala.Type.Time.Clock
        Koshucode.Baala.Type.Time.ClockCalc
        Koshucode.Baala.Type.Time.Date
        Koshucode.Baala.Type.Time.Parts
        Koshucode.Baala.Type.Time.Time
        Koshucode.Baala.Type.Time.TimeCalc

        Koshucode.Baala.Type.Type

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                      == 4.*
       , containers                == 0.5.*
       , text                      == 1.*
       , time                      == 1.*
       , koshucode-baala-overture  == 0.185.0.0
       , koshucode-baala-base      == 0.185.0.0
       , koshucode-baala-syntax    == 0.185.0.0

  ghc-options:         -Wall

