-- The name of the package.
name:                koshucode-baala-writer

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.135.0.0

-- A short (one-line) description of the package.
synopsis:            Writers for the Koshu calculator

-- A longer description of the package.
description:         This package implements writers for the Koshu calculator.
                     Writers serialize internal data of calculator
                     into some formats. Most basic writer is for Koshucode,
                     and other writers are defined for CSV, HTML table, etc.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2015, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Writer
        Koshucode.Baala.Writer.Csv
        Koshucode.Baala.Writer.Html
        Koshucode.Baala.Writer.Json
        Koshucode.Baala.Writer.Judge
        Koshucode.Baala.Writer.Koshu

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                    == 4.*
       , aeson                   == 0.*
       , blaze-html              == 0.*
       , bytestring              == 0.*
       , containers              == 0.5.*
       , csv                     == 0.*
       , text                    == 1.*
       , koshucode-baala-base    == 0.135.*
       , koshucode-baala-syntax  == 0.135.*
       , koshucode-baala-data    == 0.135.*
       , koshucode-baala-core    == 0.135.*

  ghc-options:         -Wall

